--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -49,6 +49,7 @@
      CS1712: Type parameter has no matching typeparam tag in the XML comment
      CS1723: XML comment has cref attribute that refers to a type parameter
      CS1734: XML comment has a paramref tag, but there is no parameter by that name
+     MVMTK0042: The field [ObservableProperty] can be converted to a partial property
      CsWinRT1028: Class implements WinRT interfaces but isn't marked partial
      CsWinRT1030: Class implements WinRT interfaces that require unsafe code
      XC0045: Binding: Property not found
@@ -65,6 +66,7 @@
     <WarningsAsErrors>
       nullable,
       CS0419,CS0618,CS1570,CS1571,CS1572,CS1573,CS1574,CS1580,CS1581,CS1584,CS1587,CS1589,CS1590,CS1591,CS1592,CS1598,CS1658,CS1710,CS1711,CS1712,CS1723,CS1734,
+      MVMTK0042,
       CsWinRT1028,CsWinRT1030,
       XC0045,XC0103,
       NU1900,NU1901,NU1902,NU1903,NU1904,NU1905,
@@ -86,7 +88,7 @@
       IL2110,IL2111,IL2112,IL2113,IL2114,IL2115,IL2116,IL2117,IL2118,IL2119,
       IL2120,IL2121,IL2122,
       IL3050,IL3051,IL3052,IL3053,IL3054,IL3055,IL3056
-      </WarningsAsErrors>
+    </WarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
