--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,6 +69,13 @@ jobs:
           version: '$(NET_VERSION)'
           includePreviewVersions: false
 
+      - task: JavaToolInstaller@0
+        displayName: "Install Java"
+        inputs:
+          versionSpec: "17"
+          jdkArchitectureOption: "x64"
+          jdkSourceOption: "PreInstalled"
+
       - task: CmdLine@2
         displayName: 'Install .NET MAUI Workload'
         inputs:
@@ -136,6 +143,13 @@ jobs:
           packageType: 'sdk'
           version: '$(NET_VERSION)'
           includePreviewVersions: false
+
+      - task: JavaToolInstaller@0
+        displayName: "Install Java"
+        inputs:
+          versionSpec: "17"
+          jdkArchitectureOption: "x64"
+          jdkSourceOption: "PreInstalled"
 
       - task: CmdLine@2
         displayName: 'Install .NET MAUI Workload'
