--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -193,8 +193,8 @@ jobs:
       - task: CmdLine@2
         displayName: 'Run Unit Tests'
         inputs:
-          script: 'dotnet run -c Release $(PathToCommunityToolkitUnitTestCsproj) --results-directory $(Agent.TempDirectory) --coverage --coverage-output $(Agent.TempDirectory)/coverage.cobertura.xml --coverage-output-format cobertura
-          
+          script: 'dotnet run -c Release $(PathToCommunityToolkitUnitTestCsproj) --results-directory $(Agent.TempDirectory) --coverage --coverage-output $(Agent.TempDirectory)/coverage.cobertura.xml --coverage-output-format cobertura'
+
       - task: PublishCodeCoverageResults@2
         condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
         displayName: 'Publish Code Coverage Results'
