--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -92,7 +92,7 @@ jobs:
 
       - name: Set NuGet Version to Tag Number
         if: startsWith(github.ref, 'refs/tags/')
-        run: echo "NugetPackageVersion=${${{ github.ref }}#refs/tags/}" >> $GITHUB_ENV
+        run: echo "NugetPackageVersion=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
       - name: Set NuGet Version to PR Version
         if: ${{ github.event_name == 'pull_request' }}
