--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -92,7 +92,9 @@ jobs:
 
       - name: Set NuGet Version to Tag Number
         if: startsWith(github.ref, 'refs/tags/')
-        run: echo "NugetPackageVersion=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+        run: |
+          echo "Setting NuGet version from tag: ${GITHUB_REF#refs/tags/}"
+          echo "NugetPackageVersion=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
       - name: Set NuGet Version to PR Version
         if: ${{ github.event_name == 'pull_request' }}
@@ -151,7 +153,7 @@ jobs:
         shell: bash
 
       - name: Build and Pack CommunityToolkit.Maui.Markup
-        run: dotnet pack -c Release ${{ env.PathToCommunityToolkitCsproj }} -p:PackageVersion=${{ env.NugetPackageVersion }} -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
+        run: dotnet pack -c Release ${{ env.PathToCommunityToolkitCsproj }} -p:PackageVersion=$NugetPackageVersion -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
 
       - name: 'Check Dependencies'
         if: ${{ runner.os == 'Windows' && (success() || failure()) }}
@@ -228,8 +230,8 @@ jobs:
           --file-list "${{ github.workspace }}/SignClientFileList.txt"
           --timestamp-url "http://timestamp.digicert.com"
           --publisher-name ".NET Foundation"
-          --description "Community Toolkit MAUI"
-          --description-url "https://github.com/CommunityToolkit/Maui"
+          --description ".NET MAUI Markup Community Toolkit"
+          --description-url "https://github.com/CommunityToolkit/Maui.Markup"
           --azure-key-vault-url "${{ secrets.SIGN_KEY_VAULT_URL }}"
           --azure-key-vault-client-id ${{ secrets.SIGN_CLIENT_ID }}
           --azure-key-vault-client-secret "${{ secrets.SIGN_CLIENT_SECRET }}"
