--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -18,7 +18,7 @@ env:
   # When we create a tag, we set the NuGet version to the tag number, the below values are only for PR builds.
   CurrentSemanticVersionBase: '99.0.0' # Only used for PR builds
   NugetPackageVersion: '99.0.0-preview${{ github.run_number }}' # Only used for PR builds
-  NET_VERSION: '9.0.x'
+  NET_VERSION: '10.0.x'
   RunPoliCheck: false
   PathToLibrarySolution: 'src/CommunityToolkit.Maui.Markup.sln'
   PathToSamplesSolution: 'samples/CommunityToolkit.Maui.Markup.Sample.sln'
@@ -26,7 +26,7 @@ env:
   PathToCommunityToolkitSampleCsproj: 'samples/CommunityToolkit.Maui.Markup.Sample/CommunityToolkit.Maui.Markup.Sample.csproj'
   PathToCommunityToolkitUnitTestCsproj: 'src/CommunityToolkit.Maui.Markup.UnitTests/CommunityToolkit.Maui.Markup.UnitTests.csproj'
   PathToCommunityToolkitSourceGeneratorsCsproj: 'src/CommunityToolkit.Maui.Markup.SourceGenerators/CommunityToolkit.Maui.Markup.SourceGenerators.csproj'
-  Xcode_Version: '16.3'
+  Xcode_Version: '26.0.1'
   ShouldCheckDependencies: true
 
 concurrency:
@@ -55,7 +55,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: ${{ env.NET_VERSION }}
-          dotnet-quality: 'ga'
+          dotnet-quality: 'preview'
 
       - uses: actions/setup-java@v5
         with:
@@ -112,7 +112,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: ${{ env.NET_VERSION }}
-          dotnet-quality: 'ga'
+          dotnet-quality: 'preview'
 
       - uses: actions/setup-java@v5
         with:
@@ -206,7 +206,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: ${{ env.NET_VERSION }}
-          dotnet-quality: 'ga'
+          dotnet-quality: 'preview'
 
       - name: Download NuGet List
         uses: actions/download-artifact@v5
@@ -259,7 +259,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: ${{ env.NET_VERSION }}
-          dotnet-quality: 'ga'
+          dotnet-quality: 'preview'
 
       - name: Download signed packages for ${{ matrix.platform }}
         uses: actions/download-artifact@v5
