--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -49,7 +49,7 @@ jobs:
         if: runner.os == 'macOS'
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest-stable
+          xcode-version: ${{ env.Xcode_Version }}
 
       - name: Install Latest .NET SDK, v${{ env.NET_VERSION }}
         uses: actions/setup-dotnet@v5
