--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -55,6 +55,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: ${{ env.NET_VERSION }}
+          dotnet-quality: 'ga'
 
       - uses: actions/setup-java@v5
         with:
@@ -111,6 +112,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: ${{ env.NET_VERSION }}
+          dotnet-quality: 'ga'
 
       - uses: actions/setup-java@v5
         with:
@@ -204,6 +206,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: ${{ env.NET_VERSION }}
+          dotnet-quality: 'ga'
 
       - name: Download NuGet List
         uses: actions/download-artifact@v6
@@ -256,6 +259,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: ${{ env.NET_VERSION }}
+          dotnet-quality: 'ga'
 
       - name: Download signed packages for ${{ matrix.platform }}
         uses: actions/download-artifact@v6
