--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -42,7 +42,7 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: ${{ env.LATEST_NET_VERSION }}
-          dotnet-quality: 'preview'
+          dotnet-quality: 'ga'
 
       - name: Install .NET MAUI Workload
         run: |
