--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -20,8 +20,8 @@ env:
   NugetPackageVersion: '99.0.0-preview${{ github.run_number }}' # Only used for PR builds
   NET_VERSION: '10.0.x'
   RunPoliCheck: false
-  PathToLibrarySolution: 'src/CommunityToolkit.Maui.Markup.sln'
-  PathToSamplesSolution: 'samples/CommunityToolkit.Maui.Markup.Sample.sln'
+  PathToLibrarySolution: 'src/CommunityToolkit.Maui.Markup.slnx'
+  PathToSamplesSolution: 'samples/CommunityToolkit.Maui.Markup.Sample.slnx'
   PathToCommunityToolkitCsproj: 'src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj'
   PathToCommunityToolkitSampleCsproj: 'samples/CommunityToolkit.Maui.Markup.Sample/CommunityToolkit.Maui.Markup.Sample.csproj'
   PathToCommunityToolkitUnitTestCsproj: 'src/CommunityToolkit.Maui.Markup.UnitTests/CommunityToolkit.Maui.Markup.UnitTests.csproj'
